cname update and github url

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ google_analytics: UA-47395716-3
 
 social:
   #twitter: https://twitter.com
-  github: https://github.com/
+  github: https://github.com/dgruesso
   #linkedin-square: https://linkedin.com/in/<username>
   #facebook-official: https://facebook.com/<username>
   #google-plus-square: https://plus.google.com/u/0/+<username>
